<resources>
    <string name="app_name">Sudoku</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">ca-app-pub-2668944535430183~7423520838</string>
    <string name="banner_ad_unit_id">ca-app-pub-2668944535430183/9416482050</string>
    <string name="reward_ad_unit_ad">ca-app-pub-2668944535430183/2592478433</string>
    <string name="undo">Undo</string>
    <string name="arrow_next">arrow next</string>
    <string name="arrow_back">arrow back</string>
    <string name="_0">0</string>
    <string name="mistakes_0_3">Mistakes: 0/3</string>
    <string name="erase">Erase</string>
    <string name="pencil">Pencil</string>
    <string name="hints">Hints</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="hints_icon">Hints Icon</string>
    <string name="pencil_button">Pencil button</string>
    <string name="erase_button">Erase button</string>
    <string name="undo_button">Undo button</string>
    <string name="time_00_00">Time: 00:00</string>
    <string name="time">Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="_5_12">5:12</string>
    <string name="mistakes">Mistakes</string>
    <string name="_0_3">0/3</string>
    <string name="new_game">New Game</string>
    <string name="resume">Resume</string>
    <string name="game_paused">Game Paused</string>
    <string name="conti">Continue</string>
    <string name="sudoku_classic">Sudoku Classic</string>
    <string name="game_over">Game Over</string>
    <string name="you_lost_the_game_because_you_made_3_n_mistakes">You lost the game because you made 3 \n mistakes</string>
    <string name="date">Date</string>
    <string name="timetaken">TimeTaken</string>
    <string name="delete_icon">delete icon</string>
    <string name="light_theme">light theme</string>
    <string name="dark_theme">dark theme</string>
    <string name="best_time">Best Time</string>
    <string name="expert">Expert</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="total_wins">Total Wins</string>
    <string name="perfect_wins">Perfect Wins</string>
    <string name="game_played">Game Played</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="your_feedback_helps_us_to_improve_product_and_services">Your feedback helps us to improve product and services</string>
    <string name="eg_found_some_issue">eg. Found some issue</string>
    <string name="feedback">Feedback</string>
    <string name="sudoku">Sudoku</string>
    <string name="about">About</string>
    <string name="contact_us_to_share_your_thoughts">Contact us to share your thoughts</string>
    <string name="tell_friends_about_this_cool_game">Tell friends about this cool game</string>
    <string name="share">Share</string>
    <string name="what_is_sudoku">What is Sudoku?</string>
    <string name="how_to_play">How to Play</string>
    <string name="others">Others</string>
    <string name="others_icon">others icon</string>
    <string name="highlights_row_column_and_block">Highlights row, column and block</string>
    <string name="highlight_region">Highlight Region</string>
    <string name="show_or_hide_remaining_numbers">Show or hide remaining numbers</string>
    <string name="show_remaining_numbers">Show remaining numbers</string>
    <string name="cells_with_same_digits_will_be_highlighted">Cells with same digits will be highlighted</string>
    <string name="highlight_same_numbers">Highlight same numbers</string>
    <string name="helpers">Helpers</string>
    <string name="helpers_icon">helpers icon</string>
    <string name="enables_dark_mode">Enables dark mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="on_off_audio_effects">On/Off audio effects</string>
    <string name="audio_effects">Audio Effects</string>
    <string name="lost_the_game_on_making_3_mistakes">Lost the game on making 3 mistakes</string>
    <string name="mistake_limit">Mistake Limit</string>
    <string name="show_timer_for_puzzle_solving">Show timer for puzzle solving</string>
    <string name="timer">Timer</string>
    <string name="gameplay">Gameplay</string>
    <string name="gameplay_icon">gameplay icon</string>
    <string name="app_icon">app icon</string>
    <string name="free_puzzle_game">Free Puzzle Game</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="play_icon">play icon</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="reset_password">Reset Password</string>
    <string name="take_image">Take Image</string>
    <string name="done">Done</string>
</resources>