<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window"
    tools:context=".ui.fragments.HomeFragment">

    <TextView
        android:id="@+id/sudokuClassic"
        style="@style/SudokuName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sudoku_classic"
        android:textColor="@color/heading_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newGameButton"
        style="@style/GameStartButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/new_game"
        android:paddingVertical="10dp"
        android:layout_marginBottom="90dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueGameButton"
        style="@style/GameStartButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="5dp"
        android:paddingVertical="10dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/conti"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

    <ProgressBar
        android:id="@+id/pbGameLoad"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/continueGameButton" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sudokuClassic" />

    <ImageView
        android:id="@+id/ivCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/camera"
        app:layout_constraintBottom_toBottomOf="@+id/sudokuClassic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sudokuClassic" />


</androidx.constraintlayout.widget.ConstraintLayout>